fix some social img spacing

--- a/source/css/sidebar-social.css
+++ b/source/css/sidebar-social.css
@@ -1,23 +1,23 @@
+div#sidebar-social-link {
+    width: 105px;
+}
+div#sidebar-social-link a {
+    text-decoration: none;
+}
 div#sidebar-social-link a img {
     box-sizing: border-box;
     filter: saturate(0%) brightness(0.7);
     height: 20px;
     width: 20px;
     border-radius: 4px;
-    margin-right: 3px;
+    margin: 0 3px 3px 0;
     transition: all 0.2s ease-in-out;
     z-index: 0;
     position: relative;
-}
-div#sidebar-social-link a {
-    text-decoration: none;
 }
 div#sidebar-social-link a:hover img {
     box-shadow: 1px 1px 2px grey;
     filter: none;
     transform: scale(2.5);
     z-index: 1;
-}
-div#sidebar-social-link {
-    width: 105px;
 }
